# hermes-agent-memory-qdrant

./: .gitignore  README.md  __init__.py  plugin.yaml  pyproject.toml
src/: config.py  default_config.yaml  embeddings.py  extraction.py  qdrant.py  retrieval.py  store.py  tools.py
